welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:22: error: Missing closing brace `}' assumed here
	override def forward(i:Int)  { 
        ^ZigZag:22: error: illegal start of statement (no modifiers allowed here)
	override def forward(i:Int)  { 
        ^ZigZag:25: error: illegal start of statement (no modifiers allowed here)
	override def forward()  {
        ^ZigZag:28: error: illegal start of statement (no modifiers allowed here)
	override def backward(i:Int) {
        ^ZigZag:31: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^ZigZag:34: error: Missing closing brace `}' assumed here
}
^